[package]
name = "libmonero"
description = "Ultimate Rust Monero Library"
version = "0.1.5"
edition = "2021"
license = "MPL-2.0"
homepage = "https://github.com/monumexyz/libmonero"
documentation = "https://github.com/monumexyz/libmonero/blob/main/docs/start.md"
repository = "https://github.com/monumexyz/libmonero"
readme = "README.md"
keywords = ["monero", "monero-library"]
categories = ["monero", "monero-library"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base58-monero = "2.0.0"
crc32fast = "1.3.2"
curve25519-dalek = "4.1.1"
hex = "0.4.3"
rand = "0.8.5"
regex = "1.10.2"
sha3 = "0.10.8"
