[package]
name = "libmonero"
description = "Batteries-included Monero Library"
version = "0.1.7"
edition = "2021"
license = "MIT"
homepage = "https://github.com/monumexyz/libmonero"
documentation = "https://github.com/monumexyz/libmonero/blob/main/docs/start.md"
repository = "https://github.com/monumexyz/libmonero"
readme = "README.md"
keywords = ["monero", "monero-library"]
categories = ["monero", "monero-library"]

[dependencies]
base58-monero = "2.0.0"
byteorder = "1.5.0"
crc32fast = "1.3.2"
crypto = "0.5.1"
curve25519-dalek = "4.1.1"
digest = "0.10.7"
hex = "0.4.3"
rand = "0.8.5"
regex = "1.10.2"
sha3 = { version = "0.10.8"}
tokio = { version = "1", features = ["full"] }
ureq = { version = "2", features = ["json"] }
url = "2.5.0"

# Hash
aes = { version = "0.8.3", features = ["hazmat"] }
tiny-keccak = { version = "2.0.2", features=["keccak"] }
keccak = "0.1.4"

# Hashes needed for implementing the final step
groestl = "0.10.1"
skein = "0.1.0"
blake2 = "0.10.6"
jh = "0.1.0"
